# MDSM

./: MDSM.cpp  PelicanLofarClient.cpp  README  TCPStreamer.cpp  TCPStreamer.h  brute_version  checks.py  cpu_dedisp.c  cuda_fft.cu  dedispersion_kernel.cu  dedispersion_manager.cpp  dedispersion_manager.cu  dedispersion_output.cpp  dedispersion_output.cu  dedispersion_output.h  dedispersion_thread.cu  dedispersion_thread.h  dedispersion_wrapper.cu  dm_tree.cu  file_handler.cpp  file_handler.h  input_handler.c  main  makefile  output.txt  subband  subband_dedisp.cu  survey.h
src/: .gitignore  CMakeLists.txt  MDSM.cpp  beamformer.cpp  modules.cmake
src/Prototypes/: binner.cu
src/Python/: dm_hist.py
src/beamformer/: CMakeLists.txt  beamforming_kernel.cu  beamforming_manager.cpp  beamforming_manager.h  beamforming_output.cpp  beamforming_output.h  beamforming_thread.cu  beamforming_thread.h  beamforming_wrapper.cu  beamshifts.cpp  beamshifts.h  findSatellite.py  params.h  process_beams.py  survey.h  test_fft.py
src/beamformer/helpers/: coords.py  plot_beams.py  plot_grid.py  point_DRX.py  process_beams.py  process_multipixel.py
src/cmake/: FindPGPLOT.cmake  FindPelicanLofar.cmake  compilerDefaults.cmake
src/mdsm/: CMakeLists.txt  cache_brute_force.h  dedispersion_kernel.cu  dedispersion_manager.cpp  dedispersion_manager.h  dedispersion_output.cpp  dedispersion_output.h  dedispersion_thread.cu  dedispersion_thread.h  dedispersion_wrapper.cu  survey.h  template_matching.cpp
src/mdsm-coherent/: CMakeLists.txt  CMakeLists.txt~  MDSM.cpp  coherent_dedispersion_kernel.cu  coherent_dedispersion_manager.cpp  coherent_dedispersion_manager.cpp~  coherent_dedispersion_manager.h  coherent_dedispersion_output.cpp  coherent_dedispersion_output.cpp~  coherent_dedispersion_output.h  coherent_dedispersion_thread.cu  coherent_dedispersion_thread.cu~  coherent_dedispersion_thread.h  coherent_dedispersion_wrapper.cu  observation.h
src/mdsm-multibeam/: CMakeLists.txt  CMakeLists.txt~  TestFile.xml  TestFile.xml~  cache_brute_force.h  cache_brute_force.h~  dbscan.cpp  dbscan.h  dedispersion_kernel.cu~  dedispersion_manager.cpp~  dedispersion_manager.h~  dedispersion_output.cpp~  dedispersion_thread.cu~  dedispersion_thread.h~  multibeam_dedispersion_kernel.cu  multibeam_dedispersion_kernel.cu~  multibeam_dedispersion_manager.cpp  multibeam_dedispersion_manager.cpp~  multibeam_dedispersion_manager.h  multibeam_dedispersion_manager.h~  multibeam_dedispersion_output.cpp  multibeam_dedispersion_output.cpp~  multibeam_dedispersion_output.h  multibeam_dedispersion_output.h~  multibeam_dedispersion_thread.cu  multibeam_dedispersion_thread.cu~  multibeam_dedispersion_thread.h  multibeam_dedispersion_thread.h~  multibeam_dedispersion_wrapper.cu  multibeam_dedispersion_wrapper.cu~  multibeam_dedispersion_writer.cpp  multibeam_dedispersion_writer.h  survey.h  survey.h~
src/medicina-beamformer-pipeline/: CMakeLists.txt  DoubleBuffer.cpp  DoubleBuffer.h  PacketChunker.cpp  PacketChunker.h  checkHeap.py  pipeline.cpp
src/medicina-correlator-pipeline/: CMakeLists.txt  DoubleBuffer.cpp  DoubleBuffer.h  PacketChunker.cpp  PacketChunker.h  pipeline.cpp
src/medicina-transient-pipeline/: CMakeLists.txt  SpeadBeamChunker.cpp
src/medicina-transiet-pipeline/: CMakeLists.txt  DoubleBuffer.cpp  DoubleBuffer.h  SpeadBeamChunker.h  pipeline.cpp
src/pelican-mdsm/: CMakeLists.txt
src/pelican-mdsm/modules/: CMakeLists.txt  CoherentMdsmModule.cpp  CoherentMdsmModule.h  CoherentTestAdapter.cpp  CoherentTestAdapter.h  DedispersedDataWriter.cpp  DedispersedDataWriter.h  DedispersedSeries.h  DedispersedTimeSeries.h  GuppiAdapter.cpp  GuppiAdapter.h  HeapBuffer.cpp  MDSMModule.h  MdsmModule.cpp  MdsmModule.h  MedicinaChunker.cpp  MedicinaChunker.h  MedicinaStreamDataClient.cpp  MedicinaStreamDataClient.h  RawVoltageAdapter.cpp  RawVoltageAdapter.h  SigprocAdapter.cpp  SigprocAdapter.h  SigprocWriter.cpp  SigprocWriter.h  SpeadBeamAdapterTimeSeries.cpp  SpeadBeamAdapterTimeSeries.h  SpeadBeamChunker.cpp  SpeadBeamChunker.h  SpeadBeamDataClient.cpp  SpeadBeamDataClient.h
src/pelican-mdsm/pipelines/: AtaMdsmPipeline.h  CMakeLists.txt  CoherentTestPipeline.h  DDStream1.h  DDStream2.h  GuppiMdsmPipeline.h  MdsmPipeline.h  MedicinaCoherentPipeline.h  MedicinaMdsmPipeline.h  SigprocMdsmPipeline.h
src/prototypes/: bandpass.cu  beamformer  beamformer.cu  beamformer_medicina.cu  binner  binner.cu  brute_dedisp.cu  brute_dedisp_imp.cu  brute_dedisp_imp_tex.cu  channeliser.cu  checkCohDed.py  checkMuLaw.py  checkPeriodicity.py  checkRFIClipper.py  coherent_dedisp.cu  coherent_dedisp_multiple.cu  cpu_dedisp.c  cpu_dedisp_benchmark.py  data_quantisation.cpp  dedisp_benchmark.cu  detrend.cu  fftShift.cu  fftShift.py  folding.cu  genrateFakeBroadbandSignal.py  gpu_dedisp_benchmark.py  heap_memory_copy_sse.c  huber_filter.cpp  imager.cu  makefile  matrixAddition.cu  mean_stddev.cu  median_filter.cu  mmap.c  mu-law.cpp  periodicity_search.cu  power.cu  process_cpu_benchmark.py  process_gpu_benchmark.py  rfi_clipper.cu  (+8 more)
src/prototypes/BeamformerOutput/: BeamformerOutput.pro  main.cpp
src/prototypes/DBSCAN/: DBSCAN  DBSCAN.pro  Makefile  cachegrind.out.29850  main.cpp  plotDmHistogram.py
src/prototypes/GuppiAdapter/: GuppiAdapter  GuppiAdapter.pro  Makefile  main.cpp  main.cpp~
src/prototypes/Mu-Law/: Makefile  Mu-Law  Mu-Law.pro  main.cpp
src/prototypes/OptimisedDedispersion/: dedispersion.cu  makefile  memory_access_patterns.py
src/prototypes/Pulse_Simulator/: Makefile  Pulse_Simulator  Pulse_Simulator.pro  generated_pulses.txt  main.cpp  pulses.txt
src/prototypes/channeliser/: FIRresponce.m  channeliser.cpp  coeffs  coeffs.cpp  generateCoefficients.py  generateData.py  makefile  pfbPython.py  ppf  ppf.cu  profileChanneliser.py  (+1 more)
src/python/: process_log.py
src/standalone/: CMakeLists.txt  DataEmulator.cpp  DoubleBuffer.cpp  DoubleBuffer.h  PelicanLofarClient.cpp  PelicanLofarClient.h  SpeadBeamChunker.cpp  Types.h  UdpChunker.cpp  UdpChunker.h  UdpHeader.h  file_handler.cpp  standaloneMain.cpp  standaloneMain2.cpp
(+139 files in other folders)
